# ballerina_bot_rag

./: Procfile  README.md  app.py  openapi.yaml  pyproject.toml  requirements.txt
.choreo/: component.yaml
